--- a/Application/Home/View/Index/index.html
+++ b/Application/Home/View/Index/index.html
@@ -275,7 +275,7 @@
                     <div class="listNav" style="background: #feebcb">
                         <p class="colleges">学院</p>
                         <p class="classes_1">班级</p>
-                        <p class="classRank">排名</p>
+                        <p class="classRankss">排名</p>
                     </div>
                     <ul class="list_ranks">
                         <li>
@@ -296,37 +296,37 @@
                         <li style="background: #feebcb">
                             <p class="college"></p>
                             <p class="classes"></p>
-                            <p class="classRank">4</p>
+                            <p class="classRank"></p>
                         </li>
                         <li>
                             <p class="college"></p>
                             <p class="classes"></p>
-                            <p class="classRank">5</p>
+                            <p class="classRank"></p>
                         </li>
                         <li style="background: #feebcb">
                             <p class="college"></p>
                             <p class="classes"></p>
-                            <p class="classRank">6</p>
+                            <p class="classRank"></p>
                         </li>
                         <li>
                             <p class="college"></p>
                             <p class="classes"></p>
-                            <p class="classRank">7</p>
+                            <p class="classRank"></p>
                         </li>
                         <li style="background: #feebcb">
                             <p class="college"></p>
                             <p class="classes"></p>
-                            <p class="classRank">8</p>
+                            <p class="classRank"></p>
                         </li>
                         <li>
                             <p class="college"></p>
                             <p class="classes"></p>
-                            <p class="classRank">9</p>
+                            <p class="classRank"></p>
                         </li>
                         <li style="background: #feebcb">
                             <p class="college"></p>
                             <p class="classes"></p>
-                            <p class="classRank">10</p>
+                            <p class="classRank"></p>
                         </li>
                     </ul>
                 </div>
